--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 scientific: `An enzyme is a biomolecule capable of catalyzing a biological reaction. These
 proteins can be detected using immunohistochemistry. However, another
 method to detect enzymes is to use the enzyme's endogenous activity to create
-a visible reaction productda process known as enzymatic histochemistry.
+a visible reaction productd process known as enzymatic histochemistry.
 The scientist incubates a brain section in a solution containing a chromogenic
 chemical capable of serving as a substrate for the enzyme. A colored byproduct
 indicates the presence of the enzyme. For example, endogenous
